# project-willamette

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  GOLDEN_TESTS.md  LICENSE-APACHE  LICENSE-MIT  LIMITATIONS.md  README.md  REFERENCE_COMMIT.md  REPRODUCIBILITY.md  UPSTREAM_PIN.md  rust-toolchain.toml  sonar-project.properties
.github/workflows/: ci.yml  release.yml  sonar.yml
docs/: BENCHMARKS.md  BITLINEAR_I2S_MATVEC.md  BITNET_FORWARD_PLAN.md  I2_S_LAYOUT.md  KV_CACHE_QUANT.md  LUT_KERNEL_RFC.md  PHASE_III_ARCHITECTURE_RFC.md  REFERENCE_COMPATIBILITY.md
scripts/: compare_reference.sh  run_bitnet_reference.sh  run_willamette_reference.sh  willamette
src/: error.rs  lib.rs  main.rs  synth.rs
src/chat/: dashboard.rs  engine.rs  input_editor.rs  markdown.rs  mod.rs  sysmon.rs  tui.rs
src/gguf/: mod.rs  reader.rs  tensor.rs  types.rs
src/memory/: mmap.rs
src/model/: attention.rs  bitlinear.rs  bitlinear_lut.rs  bitlinear_neon.rs  bitlinear_sparse.rs  bitlinear_sse2.rs  block.rs  cached_forward.rs  config.rs  dispatch.rs  ffn.rs  forward.rs  generate.rs  graph.rs  kv_cache.rs  lm_head.rs  mod.rs  multi_forward.rs  primitives.rs  sampler.rs  stage_timing.rs
src/model/architecture/: bitnet.rs  mod.rs  registry.rs
src/tokenizer/: bpe.rs  byte_unicode.rs  mod.rs  pretokenize.rs
tests/: attention.rs  bitlinear_i2s.rs  bitlinear_lut.rs  bitlinear_simd.rs  bitlinear_sse2.rs  bitlinear_sse2_i8.rs  block.rs  ffn.rs  forward.rs  i2s_layout.rs  kv_cache.rs  lm_head.rs  model_graph.rs  multi_token.rs  primitives.rs  run_pipeline.rs  synthetic_model.rs  tokenizer_roundtrip.rs  tokenizer_synthetic.rs
