[package]
name = "project-willamette"
version = "0.7.1"
edition = "2021"
description = "Rust-native, mmap-backed runtime for the official microsoft/BitNet-b1.58-2B-4T 1.58-bit GGUF."
license = "MIT OR Apache-2.0"
readme = "README.md"

# Backend selection is currently `cfg`-based, not feature-based:
#   * On aarch64 hosts, `src/model/bitlinear_neon.rs` is compiled in
#     and the dispatcher in `bitlinear.rs` picks NEON at runtime via
#     `is_aarch64_feature_detected!("neon")`.
#   * Elsewhere only the scalar fallback exists.
#
# A future `x86-simd` cargo feature will gate Stage 6-B (AVX2/SSE2)
# code once an x86 host is available to validate it.

[dependencies]
memmap2 = "0.9"          # zero-copy file mapping
anyhow = "1.0"           # CLI error plumbing
thiserror = "1.0"        # typed errors in src/error.rs
clap = { version = "4", features = ["derive"] }
byteorder = "1.5"        # GGUF little-endian primitive reads
regex = "1"              # byte-level BPE pre-tokenization
rayon = "1.10"           # Stage 10-C: BitLinear matvec row parallelism (ISA-neutral; M-series perf cores + multi-core SSE2/Pentium-4 friendly)
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
                         # Stage 9-E: TUI framework (re-exports crossterm).
                         # `unstable-rendered-line-info` (issue ratatui#293)
                         # exposes Paragraph::line_count, needed to compute
                         # max_scroll for sticky-to-bottom auto-scroll.
crossterm = "0.28"       # Stage 9-E: terminal raw mode + event polling
sysinfo = "0.32"         # v0.3.0: cross-platform CPU/memory polling for the dashboard pane
unicode-width = "0.2"    # v0.3.0: cell-width measurement for cursor placement (CJK / emoji)

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
# Declared cfgs that are intentionally optional (not Cargo features).
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(willamette_i8_activations)",
    "cfg(willamette_sse2_f32)",
] }
